--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,11 +1,11 @@
-- name: HTML5/CSS3
+- name: Python
   percentage: 90
   color: danger
 
-- name: Go
-  percentage: 80
+- name: Java
+  percentage: 70
   color:
 
-- name: Python
+- name: JavaScript
   percentage: 70
   color: dark
