--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,11 @@
-- title: Student, Harvard CS
-  from: 2014
-  to: 2018
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: Application Developer, ThoughtWorks, India
+  from: 2019
+  to: Present
+  description: Working with a multi national client and aiding them by creating system that enable them to make data driven decisions.
 
-- title: Software Engineer, Google, UK
-  from: 2018
-  to: present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-               nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+- title: Senior Software Engineer, vPhrase, India
+  from: 2017
+  to: 2019
+  description: Involved in creating a Business Intelligence application that would enable any user to quickly
+               make sense of their data. This application could consume data from various sources and give out outputs in different mediumn
+               (dashboards, docs, pdf etc..)
