--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -7,5 +7,5 @@
   from: 2017
   to: 2019
   description: Involved in creating a Business Intelligence application that would enable any user to quickly
-               make sense of their data. This application could consume data from various sources and give out outputs in different mediumn
-               (dashboards, docs, pdf etc..)
+               make sense of their data. This application could consume data from various sources and give outputs in different medium
+               (dashboards, docs, pdf etc..).
